fix backdrop-filter blur not working on firefox

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,26 @@ li {
   width: 160px;
 }
 
+.blur-bg-container {
+  position: absolute;
+  height: 700px;
+  top: -10px;
+  left: -10px;
+  right: -10px;
+  overflow: hidden;
+}
+
+.blur-bg {
+  -webkit-filter: blur(10px);
+          filter: blur(10px);
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
 .header .navbar {
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   padding: 15px 0;
@@ -70,14 +90,7 @@ li {
 
 .landing {
   color: white;
-  background-size: cover;
-  background-position: center;
   font-size: 18px;
-}
-
-.landing .blur {
-  -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
 }
 
 .landing__cpf {
@@ -110,21 +123,17 @@ li {
 
 .landing ul li img {
   height: 28px;
-  position: relative;
   bottom: 3px;
   margin-right: 5px;
 }
 
 .body {
-  margin-top: 30px;
   font-size: 16px;
-}
-
-.body__info {
+  margin-top: 60px;
   max-width: 470px;
 }
 
-.body__info ul li {
+.body ul li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -134,13 +143,12 @@ li {
   margin-bottom: 20px;
 }
 
-.body__info ul li .icon-chevron {
+.body ul li .icon-chevron {
   height: 27px;
   margin-right: 15px;
 }
 
 .form {
-  position: relative;
   color: black;
   background-color: #f1f1f1;
   border-radius: 10px;
@@ -178,7 +186,6 @@ li {
 }
 
 .footer {
-  position: relative;
   font-size: 12px;
   color: #a7a7a7;
   font-weight: 400;
@@ -208,16 +215,33 @@ li {
   margin-right: 10px;
 }
 
+@media (min-width: 576px) {
+  .blur-bg-container {
+    height: 676px;
+  }
+}
+
+@media (min-width: 768px) {
+  .blur-bg-container {
+    height: 620px;
+  }
+}
+
 @media (min-width: 992px) {
   .logo-lgdd {
     width: 180px;
   }
-  .form-container {
-    height: 430px;
-  }
   .form {
-    top: -440px;
     padding: 40px 60px;
+  }
+  .blur-bg-container {
+    height: 584px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .blur-bg-container {
+    height: 550px;
   }
 }
 /*# sourceMappingURL=style.css.map */
