--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -28,6 +28,23 @@
   width: 160px;
 }
 
+.blur-bg-container {
+  position: absolute;
+  height: 700px;
+  top: -10px;
+  left: -10px;
+  right: -10px;
+  overflow: hidden;
+}
+.blur-bg {
+  filter: blur(10px);
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  transform: scale(1.1);
+}
+
 .header {
   .navbar {
     border-bottom: 1px solid rgba($color: white, $alpha: 0.2);
@@ -48,12 +65,7 @@
 
 .landing {
   color: white;
-  background-size: cover;
-  background-position: center;
   font-size: 18px;
-  .blur {
-    backdrop-filter: blur(10px);
-  }
   &__cpf {
     padding: 5px 15px;
     border-radius: 5px;
@@ -73,7 +85,6 @@
       }
       img {
         height: 28px;
-        position: relative;
         bottom: 3px;
         margin-right: 5px;
       }
@@ -82,26 +93,23 @@
 }
 
 .body {
-  margin-top: 30px;
   font-size: 16px;
-  &__info {
-    max-width: 470px;
-    ul {
-      li {
-        display: flex;
-        align-items: center;
-        margin-bottom: 20px;
-        .icon-chevron {
-          height: 27px;
-          margin-right: 15px;
-        }
+  margin-top: 60px;
+  max-width: 470px;
+  ul {
+    li {
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+      .icon-chevron {
+        height: 27px;
+        margin-right: 15px;
       }
     }
   }
 }
 
 .form {
-  position: relative;
   color: black;
   background-color: #f1f1f1;
   border-radius: 10px;
@@ -137,7 +145,6 @@
 }
 
 .footer {
-  position: relative;
   font-size: 12px;
   color: #a7a7a7;
   font-weight: 400;
