--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -1,12 +1,27 @@
+@media (min-width: 576px) {
+  .blur-bg-container {
+    height: 676px;
+  }
+}
+
+@media (min-width: 768px) {
+  .blur-bg-container {
+    height: 620px;
+  }
+}
 @media (min-width: 992px) {
   .logo-lgdd {
     width: 180px;
   }
-  .form-container {
-    height: 430px;
-  }
   .form {
-    top: -440px;
     padding: 40px 60px;
+  }
+  .blur-bg-container {
+    height: 584px;
+  }
+}
+@media (min-width: 1200px) {
+  .blur-bg-container {
+    height: 550px;
   }
 }
